discussion/kv_engine/171491/171491_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Utilize folly::AsyncServerSocket

Change-Id: I7efc7020b52561f1f7f8d0af1e6743ef3fd2d9c9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-28 12:22:16.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-02-28 12:29:41.000000000
Message: 
Topic set to Morpheus
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-28 12:34:07.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15819/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.cc:135:5: warning: use "= default" to define a trivial destructor [modernize-use-equals-default]
    ~CbServerSocketImpl() override {
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:14:10: error: "server_socket.h" file not found [clang-diagnostic-error]
#include "server_socket.h"
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15819/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/network_interface_manager.h:14:10:
error: "server_socket.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15819/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44211/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\daemon/network_interface_manager.h(14): fatal error C1083: Cannot open include file: "server_socket.h": No such file or directory ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44211/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37237/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/network_interface_manager.h:14:10:
fatal error: "server_socket.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37237/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5471/ : FAILURE

Compile error at [2022-02-28T12:25:14.429Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/network_interface_manager.h:14:10:
fatal error: "server_socket.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5471/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17577/ : FAILURE

Compile error at [2022-02-28T12:30:38.683Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/network_interface_manager.h:14:10:
fatal error: server_socket.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17577/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5530/ : FAILURE

Compile error at [2022-02-28T12:30:35.050Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/network_interface_manager.h:14:10:
fatal error: server_socket.h: No such file or directory
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5530/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17905/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17905/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18614/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18614/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25979/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25979/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16644/ : FAILURE

Compile error at [2022-02-28T12:29:02.719Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/daemon/network_interface_manager.h:14:10:
fatal error: "server_socket.h" file not found
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16644/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14666/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
